force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__Status__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mapped</fullName>
                <default>true</default>
                <label>Mapped</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>