force-app/main/default/objects/copadoconnect__ObjectMapping__c/fields/copadoconnect__Synced__c.field-meta.xml
<CustomField>
    <fullName>copadoconnect__Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced?</label>
    <type>Checkbox</type>
</CustomField>